# rust-server

./: 2024-08-25-10-28-24-954-example.rs  2024-08-25-10-43-17-435-example.rs  2024-09-01-10-24-18-593-example.json  2024-09-01-10-24-18-593-example.rs  2024-09-01-16-31-20-191-example.json  Cargo.toml  index.html  json-compiler  main.rs  temp_promo.prk  test.json
files/: 2024-08-31-23-57-46-243-example.json  test.json
js/: json1.js
src/: main.rs  main.rs~  main.ry~  main.rz~
static/: index.html
static/css/: blek1.css
static/js/: json1.js
templates/: wellcom.html.hbs
