[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
json = "0.12.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio ={ version = "1.39.3", features = ["full"] }
